# wl-idle-lock

./: LICENSE  README.md  flake.nix  meson.build
src/: flake.nix  main.c  main.cpp
src/protocols/: ext-idle-notify-v1.xml
